--- a/angular-play/src/app/components/user/user.component.html
+++ b/angular-play/src/app/components/user/user.component.html
@@ -1,7 +1,11 @@
 <h1>Hello {{name}}</h1>
 <p>Title: {{title}}</p>
 <p>Address: {{address.street}}, {{address.city}}, {{address.province}}</p>
-<h3>Skills: </h3>
- <ul>
-  <li *ngFor="let skill of skills "> {{skill}} </li>
- </ul>
+
+<button (click)="toggleSkills()">Show Skills </button>
+<div *ngIf="showSkills">
+  <h3>Skills: </h3>
+  <ul>
+    <li *ngFor="let skill of skills "> {{skill}} </li>
+  </ul>
+</div>
