add element using onSubmit

--- a/angular-play/src/app/components/user/user.component.html
+++ b/angular-play/src/app/components/user/user.component.html
@@ -8,6 +8,11 @@
   <ul>
     <li *ngFor="let skill of skills "> {{skill}} </li>
   </ul>
+  
+  <form (submit)="addSkill(mySkill.value)">
+    <label>Add skill: </label>
+    <input type="text" #mySkill /> <br/>
+  </form>
 </div>
 
 <h3>Edit User</h3>
