--- a/angular-play/src/app/components/user/user.component.html
+++ b/angular-play/src/app/components/user/user.component.html
@@ -6,7 +6,10 @@
 <div *ngIf="showSkills">
   <h3>Skills: </h3>
   <ul>
-    <li *ngFor="let skill of skills "> {{skill}} </li>
+    <li *ngFor="let skill of skills; let ind = index"> 
+      {{skill}} 
+      <button (click)="deleteSkill(ind)">X</button>
+    </li>
   </ul>
   
   <form (submit)="addSkill(mySkill.value)">
